--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "lucide-react": "^0.514.0",
-    "next": "15.3.3",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.0",
