--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
       - name: Upload ENV file
         if: ${{ secrets.ENV_FILE != '' }}
         run: |
-          echo "${{ secrets.ENV_FILE }}" | ssh -i ./deploy_key -o StrictHostKeyChecking=no ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} "cat > ${{ secrets.HOSTINGER_PROJECT_PATH }}/.env"
+          echo "${{ secrets.ENV_FILE }}" | ssh -i ./deploy_key -o StrictHostKeyChecking=no \
+          ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
+          "cat > ${{ secrets.HOSTINGER_PROJECT_PATH }}/.env"
 
       - name: Restart app with PM2
         uses: appleboy/ssh-action@v1.2.0
