--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Tikle Frontend to Hostinger VPS
+name: Deploy Next.js Frontend to Hostinger VPS
 
 on:
   push:
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -22,22 +23,26 @@ jobs:
         run: npm install
 
       - name: Build app
+        env:
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+          CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
         run: npm run build
 
       - name: Deploy build to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}
-          key: ${{ secrets.HOSTINGER_SSH_KEY }}
+          username: ${{ secrets.HOSTINGER_USER }}     # root
+          key: ${{ secrets.HOSTINGER_SSH_KEY }}        # your private key
           source: ".next,package.json,package-lock.json,public,next.config.ts"
           target: "${{ secrets.HOSTINGER_PROJECT_PATH }}"
 
-      - name: Restart app with PM2
+      # Restart PM2 on the server
+      - name: Restart frontend using PM2
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}
+          username: ${{ secrets.HOSTINGER_USER }}     # root
           key: ${{ secrets.HOSTINGER_SSH_KEY }}
           script: |
             cd ${{ secrets.HOSTINGER_PROJECT_PATH }}
