--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,43 +10,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build app
-        env:
-          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
-          CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
-        run: npm run build
-
-      - name: Deploy build to VPS
+      - name: Upload project to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}     # root
-          key: ${{ secrets.HOSTINGER_SSH_KEY }}        # your private key
+          username: ${{ secrets.HOSTINGER_USER }}
+          key: ${{ secrets.HOSTINGER_SSH_KEY }}
           source: "."
           target: "${{ secrets.HOSTINGER_PROJECT_PATH }}"
+          excludes: "node_modules"
 
-      # Restart PM2 on the server
-      - name: Restart frontend using PM2
+      - name: Build on VPS and restart PM2
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}     # root
+          username: ${{ secrets.HOSTINGER_USER }}
           key: ${{ secrets.HOSTINGER_SSH_KEY }}
           script: |
             cd ${{ secrets.HOSTINGER_PROJECT_PATH }}
+            rm -rf node_modules
             npm install --omit=dev
+
+            # Inject Clerk keys into VPS environment
+            echo "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}" > .env
+            echo "CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}" >> .env
+
+            npm run build
+
             pm2 stop tikle_frontend || true
             pm2 start "npm start" --name tikle_frontend
             pm2 save
