--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,6 @@ jobs:
             npm run build
 
             # Restart PM2
-            pm2 stop tikle_frontend || true
-            pm2 start "npm start" --name tikle_frontend
+            pm2 stop tikle_main_client || true
+            pm2 start "npm start" --name tikle_main_client
             pm2 save
