--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js Frontend (ZIP Method)
+name: Deploy Next.js to Hostinger (Build on VPS)
 
 on:
   push:
@@ -10,16 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Create zip of project (EXCLUDING node_modules & .next)
-      - name: Create project ZIP
+      - name: Create ZIP file
         run: |
-          zip -r project.zip . -x "node_modules/*" ".git/*" ".next/*"
+          zip -r project.zip . -x "node_modules/*" ".git/*"
 
-      # 3️⃣ Upload ZIP to VPS
       - name: Upload ZIP to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -29,8 +26,7 @@ jobs:
           source: "project.zip"
           target: "${{ secrets.HOSTINGER_PROJECT_PATH }}"
 
-      # 4️⃣ SSH & deploy steps on VPS
-      - name: Deploy on VPS
+      - name: Build on VPS
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
@@ -39,30 +35,20 @@ jobs:
           script: |
             cd ${{ secrets.HOSTINGER_PROJECT_PATH }}
 
-            # Ensure unzip is installed
-            if ! command -v unzip &> /dev/null
-            then
-              apt-get update && apt-get install -y unzip
-            fi
+            apt-get update -y
+            apt-get install -y unzip build-essential python3
 
-            # Remove old project files
-            find . -mindepth 1 ! -name 'project.zip' -exec rm -rf {} +
+            rm -rf app components public node_modules .next package.json package-lock.json next.config.ts || true
 
-            # Unzip new project
             unzip -o project.zip
             rm project.zip
 
-            # Install dependencies
-            npm install --omit=dev
-
-            # Add Clerk keys to .env
             echo "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}" > .env
             echo "CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}" >> .env
 
-            # BUILD PROJECT ON VPS
+            npm install --omit=dev
             npm run build
 
-            # Restart PM2
             pm2 stop tikle_main_client || true
             pm2 start "npm start" --name tikle_main_client
             pm2 save
